--- a/src/pages/portada/portada.html
+++ b/src/pages/portada/portada.html
@@ -3,8 +3,6 @@
 </ion-header>
 
 <ion-content padding>
-  <div style="margin-bottom: 100px;">
-    <img src="../assets/imgs/doraemon.jpg">
-  </div>
-  <button ion-button block color="primary" navPush="HomePage">Acceder</button>
+  <div style="margin-bottom: 525px;"></div>
+  <button ion-button block color="Purple" navPush="HomePage">Acceder</button>
 </ion-content>
