--- a/src/pages/ver-clan/ver-clan.html
+++ b/src/pages/ver-clan/ver-clan.html
@@ -5,20 +5,20 @@
 </ion-header>
 
 <ion-content padding>
-  
+
   <ion-item>
     <ion-label>Nombre</ion-label>
-    <ion-input [(ngModel)]="item.nombre" type="text"></ion-input>
+    <ion-input [(ngModel)]="item.nombre" type="text" readonly></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label>Descripción</ion-label>
-    <ion-textarea [(ngModel)]="item.descripcion" type="text" rows="10" maxLength="2000"></ion-textarea>
+    <ion-textarea [(ngModel)]="item.descripcion" type="text" rows="10" maxLength="2000" readonly></ion-textarea>
   </ion-item>
 
   <ion-item>
     <ion-label>Objetivos</ion-label>
-    <ion-textarea [(ngModel)]="item.objetivos" type="text" rows="10" maxLength="2000"></ion-textarea>
+    <ion-textarea [(ngModel)]="item.objetivos" type="text" rows="10" maxLength="2000" readonly></ion-textarea>
   </ion-item>
 
   <ion-item>
@@ -26,7 +26,6 @@
     <ion-textarea [(ngModel)]="item.miembros" type="text" rows="10" maxLength="2000"></ion-textarea>
   </ion-item>
 
-  <button ion-button block clear color="Gold" (click)="guardarClan(item)">Guardar cambios</button>
-  <button ion-button block clear color="danger" (click)="borrarClan(item)">Eliminar</button>
+  <button ion-button block clear (click)="volverHome()">Atrás</button>
 
 </ion-content>
