--- a/src/pages/ver-clan/ver-clan.html
+++ b/src/pages/ver-clan/ver-clan.html
@@ -23,7 +23,7 @@
 
   <ion-item>
     <ion-label>Miembros</ion-label>
-    <ion-textarea [(ngModel)]="item.miembros" type="text" rows="10" maxLength="2000"></ion-textarea>
+    <ion-textarea [(ngModel)]="item.miembros" type="text" rows="10" maxLength="2000" readonly></ion-textarea>
   </ion-item>
 
   <button ion-button block clear (click)="volverHome()">Atrás</button>
